--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "Habeeb David",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-fetch": "^3.0.0",
+    "superagent": "^6.1.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
